--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 
     // Firebase Config
     const firebaseConfig = {
-      apiKey: "AIzaSyBw5DaGdr-8Ibon6sRhJMb3bAIWMgz4w-8",
-      authDomain: "vivasmart-4588f.firebaseapp.com",
-      projectId: "vivasmart-4588f",
-      storageBucket: "vivasmart-4588f.firebasestorage.app",
-      messagingSenderId: "815227488896",
-      appId: "1:815227488896:web:005f22c99d90d5168cb465",
-      measurementId: "G-3NNSR3J1Y5"
+      apiKey: "import.meta.env.VITE_FIREBASE_API_KEY",
+      authDomain: "import.meta.env.VITE_FIREBASE_AUTH_DOMAIN",
+      projectId: "import.meta.env.VITE_FIREBASE_PROJECT_ID",
+      storageBucket: "import.meta.env.VITE_FIREBASE_STORAGE_BUCKET",
+      messagingSenderId: "import.meta.env.VITE_FIREBASE_MESSAGING_SENDER_ID",
+      appId: "import.meta.env.VITE_FIREBASE_APP_ID",
+      measurementId: "import.meta.env.VITE_FIREBASE_MEASUREMENT_ID"
     };
 
     // Init Firebase
