--- a/login.html
+++ b/login.html
@@ -17,15 +17,12 @@
     --glass-border: rgba(255,255,255,0.18);
     --card-radius:18px;
   }
-
   html,body{height:100%;margin:0;font-family:Inter,system-ui,-apple-system,'Segoe UI',Roboto, 'Helvetica Neue', Arial;}
   body{
     background: radial-gradient(1200px 600px at 10% 20%, rgba(255,255,255,0.04), transparent),
                 linear-gradient(135deg,var(--accent1),var(--accent2));
     display:flex;align-items:center;justify-content:center;min-height:100vh;padding:24px;
   }
-
-  /* Container */
   .wrap {
     width: 980px;
     max-width:100%;
@@ -37,8 +34,6 @@
     box-shadow: 0 20px 60px rgba(0,0,0,0.25);
     backdrop-filter: blur(6px) saturate(120%);
   }
-
-  /* Left area (forms) */
   .left {
     padding:40px;
     background: linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
@@ -46,7 +41,6 @@
     align-items:center;
     justify-content:center;
   }
-
   .card {
     width:100%;
     max-width:520px;
@@ -56,54 +50,23 @@
     padding:30px;
     box-shadow: 0 10px 30px rgba(12,12,20,0.25), inset 0 1px 0 rgba(255,255,255,0.02);
   }
-
-  .card h1{
-    margin:0 0 8px 0;
-    font-size:20px;
-    color:#fff;
-    letter-spacing:0.2px;
-  }
-  .card p.lead{
-    color: rgba(255,255,255,0.85);
-    margin:0 0 18px 0;
-    font-size:14px;
-  }
-
-  .form {
-    display:grid;
-    gap:12px;
-  }
-
+  .card h1{margin:0 0 8px 0;font-size:20px;color:#fff;letter-spacing:0.2px;}
+  .card p.lead{color: rgba(255,255,255,0.85);margin:0 0 18px 0;font-size:14px;}
+  .form {display:grid;gap:12px;}
   label{font-size:12px;color:rgba(255,255,255,0.85);margin-bottom:6px;display:block}
   input[type="text"],input[type="email"],input[type="password"]{
-    width:100%;
-    padding:12px 14px;
-    border-radius:10px;
-    border:1px solid rgba(255,255,255,0.06);
-    background: rgba(0,0,0,0.12);
-    color:#fff;
-    outline: none;
-    box-shadow: inset 0 -1px 0 rgba(0,0,0,0.25);
+    width:100%;padding:12px 14px;border-radius:10px;
+    border:1px solid rgba(255,255,255,0.06);background: rgba(0,0,0,0.12);
+    color:#fff;outline: none;box-shadow: inset 0 -1px 0 rgba(0,0,0,0.25);
     transition: all .16s ease;
   }
   input::placeholder{color:rgba(255,255,255,0.6)}
   input:focus{box-shadow:0 4px 18px rgba(0,0,0,0.35); transform: translateY(-1px);}
-
   .btn{
-    display:inline-flex;
-    align-items:center;
-    justify-content:center;
-    gap:10px;
-    width:100%;
-    padding:12px 14px;
-    border-radius:10px;
-    border:none;
-    cursor:pointer;
-    font-weight:600;
-    color:#fff;
-    font-size:15px;
+    display:inline-flex;align-items:center;justify-content:center;gap:10px;
+    width:100%;padding:12px 14px;border-radius:10px;border:none;
+    cursor:pointer;font-weight:600;color:#fff;font-size:15px;
   }
-
   .btn-primary{
     background: linear-gradient(90deg,var(--accent1),var(--accent2));
     box-shadow: 0 8px 26px rgba(104,100,255,0.18);
@@ -113,29 +76,17 @@
     border: 1px solid rgba(255,255,255,0.08);
     color: rgba(255,255,255,0.95);
   }
-
   .divider-row{
     display:flex;align-items:center;gap:12px;margin:6px 0 12px;
   }
   .divider-row .line{flex:1;height:1px;background:rgba(255,255,255,0.06);border-radius:2px}
   .divider-row .txt{font-size:13px;color:rgba(255,255,255,0.72)}
-
   .footer-small{font-size:13px;color:rgba(255,255,255,0.7);margin-top:10px;text-align:center}
-
-  /* Right panel (toggle / illustration) */
   .right {
     background: linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
-    padding:32px;
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    align-items:center;
-    gap:20px;
-    color:#fff;
+    padding:32px;display:flex;flex-direction:column;justify-content:center;align-items:center;gap:20px;color:#fff;
   }
-  .right h2{
-    margin:0;font-size:22px;
-  }
+  .right h2{margin:0;font-size:22px;}
   .right p {margin:0; color:rgba(255,255,255,0.9)}
   .right .toggle-btn{
     padding:10px 18px;border-radius:10px;border:2px solid rgba(255,255,255,0.14);
@@ -143,8 +94,6 @@
     transition: all .18s ease;
   }
   .right .toggle-btn:hover{background: rgba(255,255,255,0.06); color:#fff; transform: translateY(-2px);}
-
-  /* small subtle image/icon */
   .brand-mark {
     width:84px;height:84px;border-radius:12px;
     background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.02));
@@ -152,8 +101,6 @@
     box-shadow: 0 8px 20px rgba(0,0,0,0.22);
   }
   .brand-mark i{font-size:32px;color:#fff}
-
-  /* toast / success overlay */
   .toast {
     position:fixed;left:50%;transform:translateX(-50%);bottom:28px;
     background: linear-gradient(90deg,var(--accent1),var(--accent2));
@@ -161,8 +108,6 @@
     opacity:0;pointer-events:none;transition:all .36s ease;
   }
   .toast.show{opacity:1;transform:translate(-50%, -6px);pointer-events:auto}
-
-  /* responsive */
   @media (max-width:880px){
     .wrap{grid-template-columns:1fr;gap:18px;padding:18px}
     .right{order:-1;padding:18px}
@@ -171,233 +116,153 @@
 </head>
 <body>
 
-<div class="wrap" role="main" aria-labelledby="authTitle">
-  <div class="left" aria-hidden="false">
-    <div class="card" id="card">
+<div class="wrap">
+  <div class="left">
+    <div class="card">
       <h1 id="authTitle">Welcome to VivaSmart</h1>
       <p class="lead" id="subtitle">Sign in to continue or create a new account — quick and secure.</p>
 
-      <!-- FORMS: we'll show/hide by JS -->
-      <!-- LOGIN FORM -->
-      <form id="form-login" class="form" autocomplete="on" aria-label="Sign in form">
+      <!-- Login Form -->
+      <form id="form-login" class="form" autocomplete="on">
         <div>
           <label for="loginEmail">Email</label>
-          <input id="loginEmail" name="loginEmail" type="email" placeholder="you@domain.com" required>
+          <input id="loginEmail" type="email" placeholder="you@domain.com" required>
         </div>
         <div>
           <label for="loginPassword">Password</label>
-          <input id="loginPassword" name="loginPassword" type="password" placeholder="••••••••" required>
+          <input id="loginPassword" type="password" placeholder="••••••••" required>
         </div>
-
-        <button type="submit" class="btn btn-primary" id="loginBtn">
-          <i class="fa-solid fa-right-to-bracket"></i> &nbsp; Sign In
-        </button>
-
-        <div class="divider-row">
-          <div class="line"></div><div class="txt">or</div><div class="line"></div>
-        </div>
-
-        <button type="button" class="btn btn-ghost" id="googleLoginBtn" aria-disabled="true">
-          <i class="fa-brands fa-google"></i> &nbsp; Continue with Google
-        </button>
-
-        <p class="footer-small">By continuing you agree to our <strong>Terms</strong> and <strong>Privacy</strong>.</p>
+        <button type="submit" class="btn btn-primary"><i class="fa-solid fa-right-to-bracket"></i> &nbsp; Sign In</button>
+        <div class="divider-row"><div class="line"></div><div class="txt">or</div><div class="line"></div></div>
+        <button type="button" class="btn btn-ghost" id="googleLoginBtn"><i class="fa-brands fa-google"></i> &nbsp; Continue with Google</button>
       </form>
 
-      <!-- SIGNUP FORM -->
-      <form id="form-signup" class="form" style="display:none;" aria-label="Sign up form">
+      <!-- Signup Form -->
+      <form id="form-signup" class="form" style="display:none;">
         <div>
           <label for="signupName">Full name</label>
-          <input id="signupName" name="signupName" type="text" placeholder="Jane Doe" required>
+          <input id="signupName" type="text" placeholder="Jane Doe" required>
         </div>
         <div>
           <label for="signupEmail">Email</label>
-          <input id="signupEmail" name="signupEmail" type="email" placeholder="you@domain.com" required>
+          <input id="signupEmail" type="email" placeholder="you@domain.com" required>
         </div>
         <div>
           <label for="signupPassword">Password</label>
-          <input id="signupPassword" name="signupPassword" type="password" placeholder="create a password" required>
+          <input id="signupPassword" type="password" placeholder="Create a password" required>
         </div>
-
-        <button type="submit" class="btn btn-primary" id="signupBtn">
-          <i class="fa-solid fa-user-plus"></i> &nbsp; Create account
-        </button>
-
-        <div class="divider-row">
-          <div class="line"></div><div class="txt">or</div><div class="line"></div>
-        </div>
-
-        <button type="button" class="btn btn-ghost" id="googleSignupBtn" aria-disabled="true">
-          <i class="fa-brands fa-google"></i> &nbsp; Sign up with Google
-        </button>
-
-        <p class="footer-small">We’ll never share your information without your permission.</p>
+        <button type="submit" class="btn btn-primary"><i class="fa-solid fa-user-plus"></i> &nbsp; Create account</button>
+        <div class="divider-row"><div class="line"></div><div class="txt">or</div><div class="line"></div></div>
+        <button type="button" class="btn btn-ghost" id="googleSignupBtn"><i class="fa-brands fa-google"></i> &nbsp; Sign up with Google</button>
       </form>
-
     </div>
   </div>
 
-  <aside class="right" aria-hidden="false">
-    <div class="brand-mark" aria-hidden="true"><i class="fa-solid fa-bag-shopping"></i></div>
+  <aside class="right">
+    <div class="brand-mark"><i class="fa-solid fa-bag-shopping"></i></div>
     <h2 id="toggleTitle">New here?</h2>
     <p id="toggleText">Create an account to get special deals, wishlist, and faster checkout.</p>
-    <button id="toggleBtn" class="toggle-btn" aria-controls="card">Create account</button>
+    <button id="toggleBtn" class="toggle-btn">Create account</button>
   </aside>
 </div>
 
 <!-- toast -->
 <div class="toast" id="toast">Success</div>
 
-<!-- Firebase (modular) -->
 <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-  import { getAuth, onAuthStateChanged, signInWithEmailAndPassword, createUserWithEmailAndPassword, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+import { firebaseConfig } from "./firebase-config.js";
 
-  // --------- configure this with your Firebase settings ----------
-  const firebaseConfig = {
-    apiKey: "import.meta.env.VITE_FIREBASE_API_KEY",
-    authDomain: "import.meta.env.VITE_FIREBASE_AUTH_DOMAIN",
-    projectId: "import.meta.env.VITE_FIREBASE_PROJECT_ID",
-    storageBucket: "import.meta.env.VITE_FIREBASE_STORAGE_BUCKET",
-    messagingSenderId: "import.meta.env.VITE_FIREBASE_MESSAGING_SENDER_ID",
-    appId: "import.meta.env.VITE_FIREBASE_APP_ID",
-    measurementId: "import.meta.env.VITE_FIREBASE_MEASUREMENT_ID"
-  };
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-  const googleProvider = new GoogleAuthProvider();
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const googleProvider = new GoogleAuthProvider();
 
-  // Elements
-  const formLogin = document.getElementById('form-login');
-  const formSignup = document.getElementById('form-signup');
-  const toggleBtn = document.getElementById('toggleBtn');
-  const toggleTitle = document.getElementById('toggleTitle');
-  const toggleText = document.getElementById('toggleText');
-  const toast = document.getElementById('toast');
-  const googleLoginBtn = document.getElementById('googleLoginBtn');
-  const googleSignupBtn = document.getElementById('googleSignupBtn');
+const formLogin = document.getElementById('form-login');
+const formSignup = document.getElementById('form-signup');
+const toggleBtn = document.getElementById('toggleBtn');
+const toggleTitle = document.getElementById('toggleTitle');
+const toggleText = document.getElementById('toggleText');
+const toast = document.getElementById('toast');
 
-  // show toast helper
-  function showToast(msg = 'Success', ms = 1000){
-    toast.textContent = msg;
-    toast.classList.add('show');
-    setTimeout(()=> toast.classList.remove('show'), ms + 600);
-  }
+function showToast(msg, ms){
+  toast.textContent = msg;
+  toast.classList.add('show');
+  setTimeout(()=> toast.classList.remove('show'), ms + 600);
+}
 
-  // Toggle handler
-  let inSignup = false;
-  function updateToggleUI(){
-    if(inSignup){
-      formLogin.style.display = 'none';
-      formSignup.style.display = 'grid';
-      toggleTitle.textContent = 'Already a member?';
-      toggleText.textContent = 'If you already have an account, sign in to continue shopping.';
-      toggleBtn.textContent = 'Sign In';
+function redirectAfterAuth(){
+  const checkoutRedirect = localStorage.getItem('checkoutRedirect');
+  setTimeout(()=>{
+    if(checkoutRedirect){
+      localStorage.removeItem('checkoutRedirect');
+      window.location.href = 'checkout.html';
     } else {
-      formLogin.style.display = 'grid';
-      formSignup.style.display = 'none';
-      toggleTitle.textContent = 'New here?';
-      toggleText.textContent = 'Create an account to get special deals, wishlist, and faster checkout.';
-      toggleBtn.textContent = 'Create account';
+      window.location.href = 'index.html';
     }
+  }, 700);
+}
+
+function hideForms(){
+  formLogin.style.display = 'none';
+  formSignup.style.display = 'none';
+}
+
+let inSignup = false;
+function updateToggleUI(){
+  if(inSignup){
+    formLogin.style.display = 'none';
+    formSignup.style.display = 'grid';
+    toggleTitle.textContent = 'Already a member?';
+    toggleText.textContent = 'If you already have an account, sign in.';
+    toggleBtn.textContent = 'Sign In';
+  } else {
+    formLogin.style.display = 'grid';
+    formSignup.style.display = 'none';
+    toggleTitle.textContent = 'New here?';
+    toggleText.textContent = 'Create an account to get special deals.';
+    toggleBtn.textContent = 'Create account';
   }
+}
+toggleBtn.addEventListener('click', ()=>{ inSignup = !inSignup; updateToggleUI(); });
 
-  toggleBtn.addEventListener('click', () => {
-    inSignup = !inSignup;
-    updateToggleUI();
-  });
+formLogin.addEventListener('submit', async (e)=>{
+  e.preventDefault();
+  const email = loginEmail.value.trim();
+  const pass = loginPassword.value;
+  try{
+    await signInWithEmailAndPassword(auth, email, pass);
+    hideForms();
+    showToast('Welcome back!', 700);
+    redirectAfterAuth();
+  }catch(err){ alert(err.message); }
+});
 
-  // ---------- auth state: redirect if already logged in -----------
-  onAuthStateChanged(auth, (user) => {
-    if(user){
-      // if user came from checkout flow, send them back to checkout
-      const redirectToCheckout = localStorage.getItem('checkoutRedirect');
-      if(redirectToCheckout){
-        localStorage.removeItem('checkoutRedirect');
-        showToast('Signed in — redirecting to checkout…', 900);
-        setTimeout(()=> window.location.href = 'checkout.html', 900);
-      } else {
-        showToast('Signed in — redirecting…', 700);
-        setTimeout(()=> window.location.href = 'index.html', 700);
-      }
-    }
-  });
+formSignup.addEventListener('submit', async (e)=>{
+  e.preventDefault();
+  const name = signupName.value.trim();
+  const email = signupEmail.value.trim();
+  const pass = signupPassword.value;
+  try{
+    await createUserWithEmailAndPassword(auth, email, pass);
+    hideForms();
+    showToast('Account created!', 900);
+    redirectAfterAuth();
+  }catch(err){ alert(err.message); }
+});
 
-  // ---------- Login (email/password) ----------
-  formLogin.addEventListener('submit', async (ev) => {
-    ev.preventDefault();
-    const email = document.getElementById('loginEmail').value.trim();
-    const password = document.getElementById('loginPassword').value;
-    if(!email || !password){ alert('Please enter email & password'); return; }
+async function doGoogleSignIn(){
+  try{
+    await signInWithPopup(auth, googleProvider);
+    hideForms();
+    showToast('Google sign-in successful!', 700);
+    redirectAfterAuth();
+  }catch(err){ alert(err.message); }
+}
+googleLoginBtn.addEventListener('click', doGoogleSignIn);
+googleSignupBtn.addEventListener('click', doGoogleSignIn);
 
-    try{
-      const res = await signInWithEmailAndPassword(auth, email, password);
-      console.log('login success', res.user);
-      showToast('Welcome back!', 900);
-      // redirect handled by onAuthStateChanged
-    }catch(err){
-      console.error(err);
-      alert('Sign-in failed: ' + (err.message || err));
-    }
-  });
-
-  // ---------- Sign up (email/password) ----------
-  formSignup.addEventListener('submit', async (ev) => {
-    ev.preventDefault();
-    const name = document.getElementById('signupName').value.trim();
-    const email = document.getElementById('signupEmail').value.trim();
-    const password = document.getElementById('signupPassword').value;
-    if(!name || !email || !password){ alert('Please fill all fields'); return; }
-
-    try{
-      const res = await createUserWithEmailAndPassword(auth, email, password);
-      console.log('signup success', res.user);
-      // optionally update profile displayName here via updateProfile if you want
-      showToast('Account created!', 1100);
-      // redirect handled by onAuthStateChanged
-    }catch(err){
-      console.error(err);
-      alert('Sign-up failed: ' + (err.message || err));
-    }
-  });
-
-  // ---------- Google sign-in (works only if domain & provider set in Firebase) ----------
-  async function doGoogleSignIn(){
-    try{
-      const result = await signInWithPopup(auth, googleProvider);
-      console.log('google sign-in result', result.user);
-      showToast('Google sign-in successful!', 900);
-      // redirect handled by onAuthStateChanged
-    }catch(err){
-      console.error('Google auth error', err);
-      // Helpful message for common unauthorized domain error
-      if(err.code === 'auth/unauthorized-domain' || err.code === 'auth/cancelled-popup-request'){
-        alert('Google sign-in blocked by domain settings — add your domain (e.g. localhost) in Firebase Console → Authentication → Authorized domains.');
-      } else {
-        alert('Google sign-in failed: ' + err.message);
-      }
-    }
-  }
-
-  // Attach google handlers (these buttons will be enabled if you want; leaving enabled)
-  googleLoginBtn.addEventListener('click', doGoogleSignIn);
-  googleSignupBtn.addEventListener('click', doGoogleSignIn);
-
-  // Small accessibility: allow Enter to submit on focused control
-  document.addEventListener('keydown', (e) => {
-    if(e.key === 'Enter'){
-      // if signup visible, submit signup, else login
-      if(inSignup){
-        formSignup.requestSubmit();
-      } else {
-        formLogin.requestSubmit();
-      }
-    }
-  });
-  
-
-  // initial UI state
-  updateToggleUI();
+updateToggleUI();
 </script>
 </body>
 </html>
