--- a/checkout.html
+++ b/checkout.html
@@ -1,134 +1,178 @@
-<!DOCTYPE html>
+<!DOCTYPE html>  
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Checkout - VivaSmart</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="checkout.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script src="https://js.paystack.co/v1/inline.js"></script>
   <style>
-    body {
-      background: #f8f9fa;
-    }
-    .checkout-container {
-      max-width: 900px;
-      margin: 40px auto;
-      background: #fff;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.05);
-    }
-    .checkout-header {
-      border-bottom: 1px solid #ccc;
-      margin-bottom: 20px;
-    }
-    .cart-summary img {
-      width: 60px;
-      height: 60px;
-      object-fit: cover;
-      border-radius: 8px;
-    }
+    body { background:#f9f9f9; }
+    .receipt { display:none; }
   </style>
 </head>
 <body>
-
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
-    <a class="navbar-brand" href="index.html">VivaSmart</a>
-    <div class="ms-auto">
-      <a href="cart.html" class="text-white"><i class="fas fa-shopping-cart"></i> Cart</a>
-    </div>
-  </nav>
-
-  <!-- Checkout Form -->
-  <div class="checkout-container">
-    <h2 class="checkout-header">Checkout</h2>
-    
-    <form id="checkoutForm">
-      <div class="row mb-4">
-        <div class="col-md-6">
-          <label for="name" class="form-label">Full Name</label>
-          <input type="text" class="form-control" id="name" required />
-        </div>
-        <div class="col-md-6">
-          <label for="email" class="form-label">Email Address</label>
-          <input type="email" class="form-control" id="email" required />
-        </div>
+  <div class="container my-5">
+    <h2>Checkout</h2>
+    <form id="checkoutForm" class="row g-3">
+      <div class="col-md-6">
+        <label class="form-label">Full Name</label>
+        <input type="text" id="name" class="form-control" required>
       </div>
-      <div class="row mb-4">
-        <div class="col-md-6">
-          <label for="phone" class="form-label">Phone Number</label>
-          <input type="tel" class="form-control" id="phone" required />
-        </div>
-        <div class="col-md-6">
-          <label for="address" class="form-label">Delivery Address</label>
-          <input type="text" class="form-control" id="address" required />
-        </div>
+      <div class="col-md-6">
+        <label class="form-label">Email</label>
+        <input type="email" id="email" class="form-control" required>
+      </div>
+      <div class="col-md-6">
+        <label class="form-label">Phone</label>
+        <input type="text" id="phone" class="form-control" required>
+      </div>
+      <div class="col-md-6">
+        <label class="form-label">Address</label>
+        <input type="text" id="address" class="form-control" required>
       </div>
 
-      <!-- Cart Summary -->
-      <h5 class="mb-3">Order Summary</h5>
-      <ul class="list-group cart-summary mb-4" id="cartSummary"></ul>
+      <h4>Order Summary</h4>
+      <ul id="orderSummary" class="list-group mb-3"></ul>
+      <h5>Total: ₦<span id="orderTotal">0</span></h5>
 
-      <div class="d-flex justify-content-between align-items-center my-3">
-        <h5>Total:</h5>
-        <h4 id="grandTotal">₦0</h4>
+      <div class="col-12">
+        <button type="submit" class="btn btn-success">Place Order & Pay</button>
       </div>
-
-      <button type="submit" class="btn btn-success w-100">Place Order</button>
     </form>
 
-    <div id="confirmationMessage" class="alert alert-success mt-4 d-none">
-      Thank you! Your order has been placed successfully.
+    <div class="receipt mt-5" id="receipt">
+      <h3>VivaSmart Receipt</h3>
+      <p id="receiptDetails"></p>
+      <button class="btn btn-primary" onclick="window.print()">Print Receipt</button>
     </div>
   </div>
 
-  <!-- Scripts -->
-  <script>
+  <!-- Firebase + Logic -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    import { getFirestore, collection, addDoc, serverTimestamp, updateDoc, doc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+    import { firebaseConfig } from "./firebase-config.js";
+
+    // Init Firebase
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    // Init EmailJS
+    emailjs.init("5EvnGcBSsW2DxGEt6"); // 🔑 Replace with your EmailJS public key
+
     const cart = JSON.parse(localStorage.getItem("cart")) || [];
-    const cartSummary = document.getElementById("cartSummary");
-    const grandTotalEl = document.getElementById("grandTotal");
-    const checkoutForm = document.getElementById("checkoutForm");
-    const confirmationMessage = document.getElementById("confirmationMessage");
+    const summaryEl = document.getElementById("orderSummary");
+    const totalEl = document.getElementById("orderTotal");
+    let total = 0;
 
-    let grandTotal = 0;
-
-    // Render cart summary
+    // Show order summary
     cart.forEach(item => {
-      const quantity = item.quantity || 1;
-      const totalPrice = item.price * quantity;
-      grandTotal += totalPrice;
-
       const li = document.createElement("li");
-      li.className = "list-group-item d-flex justify-content-between align-items-center";
-      li.innerHTML = `
-        <div class="d-flex align-items-center">
-          <img src="${item.image}" alt="${item.name}" class="me-3">
-          <div>
-            <strong>${item.name}</strong><br>
-            <small>₦${item.price.toLocaleString()} x ${quantity}</small>
-          </div>
-        </div>
-        <span>₦${totalPrice.toLocaleString()}</span>
-      `;
-      cartSummary.appendChild(li);
+      li.className = "list-group-item d-flex justify-content-between";
+      li.innerHTML = `${item.name} (x${item.quantity || 1}) <span>₦${(item.price * (item.quantity || 1)).toLocaleString()}</span>`;
+      summaryEl.appendChild(li);
+      total += item.price * (item.quantity || 1);
     });
+    totalEl.textContent = total.toLocaleString();
 
-    grandTotalEl.textContent = `₦${grandTotal.toLocaleString()}`;
-
-    // Submit form
-    checkoutForm.addEventListener("submit", function(e) {
+    // Checkout Form Submit
+    document.getElementById("checkoutForm").addEventListener("submit", async (e) => {
       e.preventDefault();
+      console.log("✅ Checkout form submitted");
 
-      // Normally here you'd send to server
-      localStorage.removeItem("cart");
-      confirmationMessage.classList.remove("d-none");
-      checkoutForm.reset();
-      cartSummary.innerHTML = "";
-      grandTotalEl.textContent = "₦0";
+      const name = document.getElementById("name").value;
+      const email = document.getElementById("email").value;
+      const phone = document.getElementById("phone").value;
+      const address = document.getElementById("address").value;
+
+      try {
+        // Save order first
+        const orderRef = await addDoc(collection(db, "orders"), {
+          name, email, phone, address,
+          items: cart,
+          total,
+          status: "Pending",
+          createdAt: serverTimestamp()
+        });
+
+        console.log("✅ Order saved with ID:", orderRef.id);
+
+        // Now trigger Paystack
+        payWithPaystack(orderRef.id, name, email, total, cart);
+
+      } catch (err) {
+        console.error("❌ Firestore error:", err);
+        alert("❌ Firestore error: " + err.message);
+      }
     });
+
+    // Paystack function
+    function payWithPaystack(orderId, name, email, total, cart) {
+      console.log("🚀 Initiating Paystack payment...");
+
+      let handler = PaystackPop.setup({
+        key: "pk_test_fb80d551bdcc344f4648762a479d470f9f56abaf", // 🔑 Test Public Key
+        email: email,
+        amount: total * 100, // Convert Naira to Kobo
+        currency: "NGN",
+        callback: function(response) {
+          console.log("✅ Payment success:", response.reference);
+
+          // Update Firestore
+          updateDoc(doc(db, "orders", orderId), {
+            status: "Paid",
+            transactionRef: response.reference
+          }).then(() => {
+            console.log("✅ Firestore updated: Paid");
+
+            // Show receipt
+            document.getElementById("receiptDetails").innerHTML =
+              `<strong>Order ID:</strong> ${orderId}<br>
+               <strong>Name:</strong> ${name}<br>
+               <strong>Email:</strong> ${email}<br>
+               <strong>Total:</strong> ₦${total.toLocaleString()}<br>
+               <strong>Status:</strong> Paid<br>
+               <strong>Transaction Ref:</strong> ${response.reference}`;
+            document.getElementById("receipt").style.display = "block";
+
+            // Clear cart
+            localStorage.removeItem("cart");
+
+            // Send Email Receipt
+            sendReceipt(orderId, name, email, cart, total, response.reference);
+          }).catch(err => {
+            alert("❌ Firestore update failed: " + err.message);
+          });
+        },
+        onClose: function() {
+          alert("❌ Payment cancelled by user");
+        }
+      });
+
+      handler.openIframe(); // 🚀 Opens Paystack popup
+    }
+
+    // Send receipt with EmailJS
+    function sendReceipt(orderId, name, email, cart, total, reference){
+      const itemsList = cart.map(i => `${i.name} (x${i.quantity || 1})`).join(", ");
+      emailjs.send("service_xiiwskd", "template_y670g62", {
+        order_id: orderId,
+        name: name,
+        email: email,
+        items: itemsList,
+        total: `₦${total.toLocaleString()}`,
+        reference: reference
+      }).then(() => {
+        console.log("📧 Receipt sent to email");
+      }).catch(err => console.error("❌ EmailJS error:", err));
+    }
   </script>
+
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
+  <script type="module" src="checkout.js"></script>
 </body>
 </html>
