--- a/index.html
+++ b/index.html
@@ -56,17 +56,7 @@
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
     import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
-
-    // Firebase Config
-    const firebaseConfig = {
-      apiKey: "import.meta.env.VITE_FIREBASE_API_KEY",
-      authDomain: "import.meta.env.VITE_FIREBASE_AUTH_DOMAIN",
-      projectId: "import.meta.env.VITE_FIREBASE_PROJECT_ID",
-      storageBucket: "import.meta.env.VITE_FIREBASE_STORAGE_BUCKET",
-      messagingSenderId: "import.meta.env.VITE_FIREBASE_MESSAGING_SENDER_ID",
-      appId: "import.meta.env.VITE_FIREBASE_APP_ID",
-      measurementId: "import.meta.env.VITE_FIREBASE_MEASUREMENT_ID"
-    };
+    import { firebaseConfig } from "./firebase-config.js"; // ✅ external config
 
     // Init Firebase
     const app = initializeApp(firebaseConfig);
@@ -76,28 +66,25 @@
     const userNameEl = document.getElementById("userName");
     const userEmailEl = document.getElementById("userEmail");
 
-    // Check login status
+    // 🔹 Auth check: show user OR redirect immediately
     onAuthStateChanged(auth, (user) => {
       if (user) {
         userNameEl.textContent = user.displayName ? `Hi, ${user.displayName}` : "Hi, User";
         userEmailEl.textContent = `(${user.email})`;
         logoutBtn.style.display = "inline-block";
       } else {
-        userNameEl.textContent = "";
-        userEmailEl.textContent = "";
-        logoutBtn.style.display = "none";
-        window.location.href = "login.html";
+        window.location.href = "login.html"; // instant redirect if not logged in
       }
     });
 
-    // Logout
+    // 🔹 Logout
     logoutBtn.addEventListener("click", () => {
       signOut(auth).then(() => {
         window.location.href = "login.html";
       });
     });
 
-    // Product List
+    // 🔹 Product List
     const products = [
       { id: 1, name: "Wireless Earbuds", price: 9500, image: "./assets/images/wireless earbuds.jpg" },
       { id: 2, name: "Smart Watch", price: 15500, image: "./assets/images/smartwatch01.jpg" },
@@ -127,7 +114,7 @@
       productList.appendChild(col);
     });
 
-        // Update Cart Count (sum of all product quantities)
+    // 🔹 Update Cart Count (sum of all product quantities)
     function updateCartCount() {
       const cart = JSON.parse(localStorage.getItem("cart")) || [];
       const totalQty = cart.reduce((sum, item) => sum + (item.quantity || 1), 0);
